--- a/src/styles/Presets.scss
+++ b/src/styles/Presets.scss
@@ -18,6 +18,7 @@
             $red: hsl(0, 100%, 50%);
             $redGray: hsl(0, 70%, 50%);
             $grayRed: hsl(0, 50%, 50%);
+            $darkRed: hsl(0, 70%, 28%);
     // Trans Reds 
             $redTrans: hsl(0, 100%, 50%);
             $redGrayTrans: hsl(0, 70%, 50%);
