--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -13,6 +13,10 @@
         font-size: 1.15rem;  
     }
 
+    .navactive {
+        color: $brightGray;
+    }
+
     .sociallink {
         background-color: $grayRed;
 
