--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,4 +1,10 @@
 #header {
+    .navtitle {
+        background: -webkit-linear-gradient($midGray, $red);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 2rem;
+    }
 
     .headerbackground {
         background: $blackGray;
