--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -20,6 +20,10 @@
         font-size: 1.15rem;  
     }
 
+    .navactive {
+        color: $brightGray;
+    }
+    
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(128, 128, 128)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }  
