--- a/src/styles/Defaults.scss
+++ b/src/styles/Defaults.scss
@@ -1,3 +1,47 @@
 body {
     font-family: $font-main;
+
+}
+
+.image-section {
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 0;
+}
+
+.section-overlay {
+    background: $darkGrayRedTrans;
+    color: $brightGray;
+    margin-top: 4rem;
+    left: 0;
+    text-align: center;
+    border: 1px $grayTrans solid;
+    box-shadow: 1px 1px 4px $midGray;
+    width: 100%;
+}
+
+button {
+    display: inline-block;
+    font-weight: 400;
+    color: $lightGray;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: $grayTransButton;
+    border: 1px $grayTrans solid;
+    box-shadow: 2px 2px 4px $midGray;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-color: #6c757d;
+
+}
+
+button:hover {
+    background-color: $gray;
 }
