Homepage initial completion

--- a/src/styles/Defaults.scss
+++ b/src/styles/Defaults.scss
@@ -12,7 +12,7 @@ body {
 .section-overlay {
     background: $darkGrayRedTrans;
     color: $brightGray;
-    margin-top: 4rem;
+    margin: 6rem;
     left: 0;
     text-align: center;
     border: 1px $grayTrans solid;
