Homepage responsive tuneups

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -4,5 +4,10 @@
         background-position: 65%;
     }
     
+    .imgtag {
+        width: 100%;
+        max-width: 550px;
+        height: auto;
+    }
 }
 
