Contact Us Component Initial Completion

--- a/src/styles/Presets.scss
+++ b/src/styles/Presets.scss
@@ -13,6 +13,7 @@
             $lightGrayTrans: hsla(0, 0%, 73%, .2);
             $grayTrans: hsla(0, 0%, 37%, .2);
             $grayTransButton: hsla(0, 0%, 7%, 0.8);
+            $darkGrayTrans: rgba(20, 20, 20, 0.945);
             $blackGrayTrans: hsla(0, 0%, 18%, .2);
             $blackTransImage: hsla(0, 0%, 0%, .5);
     // Solid Reds 
