--- a/src/styles/Defaults.scss
+++ b/src/styles/Defaults.scss
@@ -20,6 +20,17 @@ body {
     width: 100%;
 }
 
+.section-overlay2 {
+    background: $darkGrayTrans;
+    color: $brightGray;
+    margin: 6rem;
+    left: 0;
+    text-align: center;
+    border: 1px $grayTrans solid;
+    box-shadow: 1px 1px 4px $midGray;
+    width: 100%;
+}
+
 button {
     display: inline-block;
     font-weight: 400;
