Contact Component Form Fix Up

--- a/src/styles/ContactUs.scss
+++ b/src/styles/ContactUs.scss
@@ -6,8 +6,12 @@
     
     .imgtag {
         width: 100%;
-        max-width: 1200px;
+        max-width: 992px;
         height: auto;
+    }
+
+    h1 {
+        font-size: 3rem;
     }
 }
 
