--- a/src/styles/Defaults.scss
+++ b/src/styles/Defaults.scss
@@ -57,6 +57,32 @@ button:hover {
     background-color: $gray;
 }
 
+.submitbutton {
+    display: inline-block;
+    font-weight: 400;
+    color: $lightGray;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: $grayTransButton;
+    border: 1px $grayTrans solid;
+    box-shadow: 2px 2px 4px $midGray;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-color: #6c757d;
+}
+
+.submitbutton:hover {
+    background-color: $gray;
+}
+
+
 .graybackground {
     background-color: $gray;
 }
