--- a/src/styles/Order.scss
+++ b/src/styles/Order.scss
@@ -18,4 +18,22 @@
         border: 1px $grayTrans solid;
         box-shadow: 1px 1px 4px $midGray;
     }
+
+    .list-overlay {
+        background: $darkGray;
+        color: $brightGray;
+        text-align: center;
+        border: 1px $grayTrans solid;
+        box-shadow: 1px 1px 4px $midGray;
+        width: 100%;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        padding-top: .5rem;
+        transition: .25s ease-in-out;
+    }
+
+    .list-overlay:hover {
+        background: $darkRed;
+        cursor: pointer;
+    }
 }
