--- a/src/styles/Presets.scss
+++ b/src/styles/Presets.scss
@@ -26,6 +26,7 @@
             $redGrayTrans: hsla(0, 70%, 50%, .5);
             $grayRedTrans: hsla(0, 50%, 50%, .5);
             $darkGrayRedTrans: rgba(78, 9, 9, 0.85);
+            $darkRedFormTrans: rgba(255, 30, 30, 0.20);
 
 // Fonts
         $font-main: fantasy, sans-serif;
