--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -4,6 +4,6 @@
 @import 'Footer';
 @import 'Home';
 @import 'ContactUs';
-@import 'SoftwarePage';
+@import 'Software';
 @import 'About';
 @import 'Order';
